[package]
name = "md2tex"
version = "0.1.2"
authors = ["lbeckman314 <liam@liambeckman.com>"]
description = "A small utility to convert markdown files to pdf exploiting tectonic. This is a forked version based off of tforgione's awesome library (https://gitea.tforgione.fr/tforgione/md2pdf/)."
edition = "2018"
license = "MIT"
repository = "https://github.com/lbeckman314/md2tex"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.5.2"
clap = "2.33.0"
walkdir = "2.2.9"
Inflector = "0.11.4"
regex = "1.2.1"
raqote = "0.6.1"
log = "0.4.8"
env_logger = "0.6.2"

[dependencies.resvg]
version = "0.7.0"
features = ["raqote-backend"]
